Fix Vertical spacing on bridal party, fix spelling, and fix registry link that now works on mobile

--- a/_sass/bridal.scss
+++ b/_sass/bridal.scss
@@ -46,7 +46,7 @@
     margin-left: 5%;
     margin-right: 5%;
     .carousel-inner {
-      height: 20em;
+      height: 25em;
     }
     .carousel-header{
       text-align: center;
